<resources>
    <string name="app_name">HD-厨显KDS</string>
    <string name="title_activity_login">欢迎使用 厨显KDS</string>
    <string name="prompt_username">输入用户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="welcome">"欢迎 !"</string>
    <string name="invalid_username">请输入用户名</string>
    <string name="invalid_password">密码必须大于5位</string>
    <string name="login_failed">"登录失败"</string>

    <string name="copy_right">HD KDS Copyright © 1997-%s HEADING Co. Ltd. All Rights Reserved. 海鼎公司 版权所有</string>

    <string name="fail_to_create_directory">创建目录 %s 失败</string>
    <string name="tab_order_manage">订单管理</string>
    <string name="tab_order_search">订单查询</string>
    <string name="settings">设置</string>
    <string name="switch_do">切换</string>
    <string name="selected">已选</string>
    <string name="switcher_store">选择门店</string>
    <string name="switcher_department">选择出品部门</string>
    <string name="bind_lds">绑定客显</string>
    <string name="logout">退出登录</string>
    <string name="bind_lds_confirm">确认绑定</string>
    <string name="settings_bind_lds_hint">请输入客显网址</string>
    <string name="settings_error_blank_lds_input">客显地址不能为空</string>
    <string name="settings_error_lds_input">请输入正确的IP地址</string>
    <string name="settings_success_bind_lds">绑定成功！</string>
    <string name="back">返回</string>

    <string name="order_manage_show_type_page">切换为分类显示</string>
    <string name="order_manage_show_all_page">切换为全部显示</string>

    <string name="order_action_cook_over">制作完成</string>
    <string name="order_action_pick_up">确认取餐</string>
    <string name="order_manage_all">全部订单</string>
    <string name="order_manage_cooking">制作中</string>
    <string name="order_manage_ready">待取餐</string>
    <string name="order_manage_order_date">下单时间：\n %s</string>
    <string name="has_waited">已等待</string>

    <string name="do_search">查询</string>
    <string name="search_input_hint">请输入取餐号</string>
    <string name="settings_logout_confirm">确认要退出？</string>
    <string name="select_store">选择门店</string>
    <string name="search_column_name">取餐号</string>
    <string name="search_column_date">下单时间</string>
    <string name="search_column_state">订单状态</string>

    <string name="order_state_finish">已完成</string>
    <string name="order_state_cooking">制作中</string>
    <string name="order_state_ready">待取餐</string>
    <string name="order_search_error_input_empty">取餐号不能为空</string>

</resources>