<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bussiness.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="274dp"
        android:layout_height="656dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_settings_menu"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_gravity="bottom">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="#4AFFFFFF"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/img_avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:src="@mipmap/cutting_yonghumingchen" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="#BBFFFFFF"
            android:textSize="20sp"
            tools:text="userName" />

        <TextView
            android:id="@+id/tv_switcher_store"
            android:layout_width="226dp"
            android:layout_height="88dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/bg_settings_switcher"
            android:drawableStart="@mipmap/ic_xuanzemendian"
            android:drawablePadding="6dp"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:text="@string/switcher_store"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_switcher_department"
            android:layout_width="226dp"
            android:layout_height="88dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_settings_switcher"
            android:drawableStart="@mipmap/ic_xuanzebumen"
            android:drawablePadding="6dp"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:text="@string/switcher_department"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_bind_lds"
            android:layout_width="226dp"
            android:layout_height="88dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_settings_switcher"
            android:drawableStart="@mipmap/ic_bangdingkexian"
            android:drawablePadding="6dp"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:text="@string/bind_lds"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/logout"
            android:textColor="#FF3333"
            android:textSize="20sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_marginStart="282dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:padding="8dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_switcher_store_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            tools:listitem="@layout/item_store_selector"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_switcher_department_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:listitem="@layout/item_store_selector"
            tools:visibility="visible" />

        <include
            android:id="@+id/bind_lds_layout"
            layout="@layout/settings_bind_lds_layout" />

        <ProgressBar
            android:id="@+id/pb_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible"
            tools:visibility="visible" />

    </FrameLayout>


</FrameLayout>