<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary_black"
    tools:context=".bussiness.home.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/bg_tool_bar">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:paddingStart="50dp"
            android:paddingEnd="24dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/cutting_logo" />

        <Space
            android:layout_width="72dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_tab_order_manage"
            android:layout_width="@dimen/tab_text_w"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/color_tv_main_order"
            android:text="@string/tab_order_manage" />

        <TextView
            android:id="@+id/tv_tab_order_search"
            android:layout_width="@dimen/tab_text_w"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/color_tv_main_order"
            android:text="@string/tab_order_search" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_main_settings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="48dp"
            android:gravity="center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:drawableStart="@mipmap/icon_shezhi"
            android:drawablePadding="4dp"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

<!--    <FrameLayout-->
<!--        android:id="@+id/main_fragment_container"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent" />-->

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/main_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>